# dummy_ctrl

./: .gitignore  README.md  dummy_env_real.py  dummy_env_sim.py  dummy_playground.ipynb  dummy_precision_test.ipynb  eval_results.txt  parquet_movej.py  push_data_to_hub.py  pyproject.toml  ref_initial_test.ipynb  requirements.txt
dual_arm/: bi_real_arm_teleop_real.py  bi_real_arm_teleop_sim.py
fibre/: __init__.py  discovery.py
inference/: local_policy_inference.py  policy_client.py  server.py  test_requests.sh
inference/fastapi/: policy_fastapi_client.py  policy_fastapi_server.py
inference/grpc/: README.md  act_eval_client.py  policy_grpc_client.py  policy_grpc_client_file_warmup.py  policy_grpc_client_test.py  policy_grpc_client_test_movej.py  policy_grpc_server.py  wandb_visualizer.py
inference/grpc/proto/: policy.proto  policy_pb2.py  policy_pb2_grpc.py
scripts/: control.sh
single_arm/: arm_angle.py  bi_gripper_open.py  data_collector.py  eval_real.py  meta.py  real_collector.py  real_single_arm_teleop.py  real_single_arm_teleop_eef.py  real_single_arm_teleop_joint.py  sim_single_arm_teleop.py  single_arm_interface.py  video_collector.py
